# nordctl

./: .gitignore  CHANGELOG.md  LEGAL.md  LICENSE  MANIFEST.in  OPEN_SOURCE.md  README.md  config.example.yaml  install.sh  pyproject.toml  wipe.sh
docs/: ARCHITECTURE.md  COMPATIBILITY.md  HOOKS.md  INSTALL_WIZARD.md  PUBLISH_CHECKLIST.md  PYPI_SETUP.md  openapi.yaml
nordctl/: __init__.py  __main__.py  actions.py  activity_log.py  alerts.py  allowlist_mgr.py  bandwidth.py  baseline.py  bluetooth_spectrum.py  cli.py  community_presets.py  compatibility.py  config.py  config_bundle.py  config_fields.py  connection_details.py  connection_journal.py  demo_mode.py  disconnect_watch.py  dns_assistant.py  doctor.py  factory_reset.py  features.py  files.py  firewall_panel.py  health_score.py  help_content.py  home_ip.py  hooks.py  host_status.py  ip_info.py  ipv6_lan.py  json_util.py  leaklab.py  listeners.py  meshnet_ui.py  nettools.py  network_access.py  network_audit.py  network_linux.py  (+46 more)
presets/: README.md  analytics-off.yaml  apac-travel.yaml  arp-ignore-off.yaml  arp-ignore-on.yaml  autoconnect-disable.yaml  autoconnect-enable.yaml  connect-city.yaml  connect-server.yaml  custom-dns-off.yaml  custom-dns.yaml  dedicated-ip.yaml  disconnect.yaml  double-vpn.yaml  eu-privacy.yaml  firewall-off.yaml  firewall-on.yaml  full-vpn.yaml  gaming.yaml  global-mobile.yaml  killswitch-off.yaml  killswitch-on.yaml  lan-discovery-off.yaml  lan-discovery-on.yaml  latam-public.yaml  local-services.yaml  meshnet-disabled.yaml  meshnet-off.yaml  meshnet-on.yaml  meshnet-only.yaml  meshnet-peer.yaml  minimal-vpn.yaml  nord-dns.yaml  nordlynx.yaml  nordwhisper.yaml  notifications-off.yaml  notifications-on.yaml  onion-over-vpn.yaml  openvpn.yaml  (+26 more)
(+33 files in other folders)
