# nordctl-src-id:NCTL-src-a7f3c912-6e4b-5d8a
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nordctl"
version = "0.2.0"
description = "Preset-driven NordVPN control for Linux — CLI and local web UI"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "nordctl contributors" }]
keywords = ["nordvpn", "vpn", "meshnet", "smart-dns", "linux"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: System :: Networking",
  "Topic :: System :: Systems Administration",
]
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "build>=1.0"]
tray = ["pystray>=0.19.5", "Pillow>=9.0"]

[project.scripts]
nordctl = "nordctl.cli:main"

[project.urls]
Homepage = "https://github.com/G4EA5/nordctl"
Documentation = "https://github.com/G4EA5/nordctl#readme"
Repository = "https://github.com/G4EA5/nordctl"
Issues = "https://github.com/G4EA5/nordctl/issues"
Changelog = "https://github.com/G4EA5/nordctl/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["nordctl*"]

[tool.setuptools.package-data]
nordctl = ["static/*"]

[tool.setuptools.data-files]
"share/nordctl/presets" = ["presets/*.yaml"]
"share/nordctl/presets/community" = ["presets/community/*.yaml"]
"share/nordctl/docs" = ["docs/openapi.yaml", "docs/COMPATIBILITY.md"]
